--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@astrojs/react": "^4.4.2",
     "@lucide/astro": "^0.575.0",
     "@tailwindcss/vite": "^4.2.1",
+    "@types/leaflet": "^1.9.21",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.575.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
